<resources>
    <string name="app_name">ProjetoPDM</string>
    <string-array name="classes">
        <item>Class A</item>
        <item>Class B</item>
        <item>Class C</item>
        <item>Class D</item>
    </string-array>
    <string name="searchString">Search</string>
    <string name="licensePlateString">License Plate</string>
    <string name="hintMatricula" translatable="false">00AA00</string>
    <string name="SearchVehicleString">Search Vehicle</string>
    <string name="VehiclesNotFoundString">Vehicles not found</string>
    <string name="textViewOwner">Owner</string>
    <string name="editTextOwner">Owner\'s name</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string-array name="countries">
        <item>P,  Portugal </item>
        <item>A,  Austria</item>
        <item>AFG,  Afghanistan</item>
        <item>AL,  Albania</item>
        <item>AM,  Armenia</item>
        <item>AND,  Andorra</item>
        <item>AUS,  Australia</item>
        <item>AZ,  Azerbaijan</item>
        <item>B,  Belgium</item>
        <item>BD,  Bangladesh</item>
        <item>BDS,  Barbados</item>
        <item>BF,  Burkina Faso</item>
        <item>BG,  Bulgaria</item>
        <item>BH,  Belize</item>
        <item>BIH,  Bosnia and Herzegovina</item>
        <item>BOL,  Bolivia</item>
        <item>BR,  Brazil</item>
        <item>BRN,  Bahrain</item>
        <item>BRU,  Brunei</item>
        <item>BS,  Bahamas</item>
        <item>BUR,  Myanmar</item>
        <item>BVI,  British Virgin Islands</item>
        <item>BW, Botswana</item>
        <item>BY,  Belarus</item>
        <item>C,  Cuba</item>
        <item>CAM,  Cameroon</item>
        <item>CDN,  Canada</item>
        <item>CGO,  Democratic Republic of the Congo</item>
        <item>CH,  Switzerland</item>
        <item>CI,  Ivory Coast </item>
        <item>CL,  Sri Lanka</item>
        <item>CO,  Colombia</item>
        <item>CR,  Costa Rica</item>
        <item>CY,  Cyprus</item>
        <item>CZ,  Czech Republic</item>
        <item>D,  Germany</item>
        <item>DK,  Denmark</item>
        <item>DOM,  Dominican Republic</item>
        <item>DY,  Benin</item>
        <item>Z,  Algeria</item>
        <item>E,  Spain</item>
        <item>EAK,  Kenya</item>
        <item>EAT,  Tanzania</item>
        <item>EAU,  Uganda</item>
        <item>EAZ,  Zanzibar</item>
        <item>EC,  Ecuador</item>
        <item>ER,  Eritrea</item>
        <item>ES,  El Salvador</item>
        <item>EST,  Estonia</item>
        <item>ET,  Egypt</item>
        <item>ETH,  Ethiopia</item>
        <item>F,  France</item>
        <item>FIN,  Finland</item>
        <item>FJI,  Fiji</item>
        <item>FL,  Liechtenstein</item>
        <item>FO,  Faroe Islands</item>
        <item>G,  Gabon</item>
        <item>GB,  United Kingdom</item>
        <item>GBA,  Alderney</item>
        <item>GBG,  Guernsey</item>
        <item>GBJ,  Jersey</item>
        <item>GBM,  Isle of Man</item>
        <item>GBZ,  Gibraltar</item>
        <item>GCA,  Guatemala</item>
        <item>GE,  Georgia</item>
        <item>GH,  Ghana</item>
        <item>GR,  Greece</item>
        <item>GUY,  Guyana</item>
        <item>H,  Hungary</item>
        <item>HKJ,  Jordan</item>
        <item>HN,  Honduras</item>
        <item>HR,  Croatia</item>
        <item>I,  Italy</item>
        <item>IL,  Israel</item>
        <item>IND,  India</item>
        <item>IR,  Iran</item>
        <item>IRL,  Ireland</item>
        <item>IRQ,  Iraq</item>
        <item>IS,  Iceland</item>
        <item>J,  Japan</item>
        <item>JA,  Jamaica</item>
        <item>K,  Cambodia</item>
        <item>KS,  Kyrgyzstan</item>
        <item>KSA,  Saudi Arabia</item>
        <item>KWT,  Kuwait</item>
        <item>KZ,  Kazakhstan</item>
        <item>L,  Luxembourg</item>
        <item>LAO,  Laos</item>
        <item>LAR,  Libya</item>
        <item>LB,  Liberia</item>
        <item>LS,  Lesotho</item>
        <item>LT,  Lithuania</item>
        <item>LV,  Latvia</item>
        <item>M,  Malta</item>
        <item>MA,  Morocco</item>
        <item>MAL,  Malaysia</item>
        <item>MC,  Monaco</item>
        <item>MD,  Moldova</item>
        <item>MEX,  Mexico</item>
        <item>MNE,  Montenegro</item>
        <item>MNG,  Mongolia</item>
        <item>MOC,  Mozambique</item>
        <item>MS,  Mauritius</item>
        <item>MW,  Malawi</item>
        <item>N,  Norway</item>
        <item>NA,  Netherlands Antilles</item>
        <item>NAM,  Namibia</item>
        <item>NAU,  Nauru</item>
        <item>NEP,  Nepal</item>
        <item>NIC,  Nicaragua</item>
        <item>NL,  Netherlands</item>
        <item>NMK,  North Macedonia</item>
        <item>NZ,  New Zealand</item>
        <item>PA,  Panama</item>
        <item>PE,  Peru</item>
        <item>PK,  Pakistan</item>
        <item>PL,  Poland</item>
        <item>PNG,  Papua New Guinea</item>
        <item>PY,  Paraguay</item>
        <item>Q,  Qatar</item>
        <item>RA,  Argentina</item>
        <item>RC,  Republic of China (Taiwan)</item>
        <item>RCA,  Central African Republic</item>
        <item>RCB,  Republic of the Congo</item>
        <item>RCH,  Chile</item>
        <item>RG,  Guinea</item>
        <item>RH,  Haiti</item>
        <item>RI,  Indonesia</item>
        <item>RIM,  Mauritania</item>
        <item>RKS,  Kosovo</item>
        <item>RL,  Lebanon</item>
        <item>RM,  Madagascar</item>
        <item>RMM,  Mali</item>
        <item>RN,  Niger</item>
        <item>RO,  Romania</item>
        <item>ROK,  South Korea</item>
        <item>RP,  Philippines</item>
        <item>RSM,  San Marino</item>
        <item>RU,  Burundi</item>
        <item>RUS,  Russia</item>
        <item>RWA,  Rwanda</item>
        <item>S,  Sweden</item>
        <item>SD,  Eswatini</item>
        <item>SGP,  Singapore</item>
        <item>SK,  Slovakia</item>
        <item>SLO,  Slovenia</item>
        <item>SME,  Suriname</item>
        <item>SN,  Senegal</item>
        <item>SO,  Somalia</item>
        <item>SRB,  Serbia</item>
        <item>SUD,  Sudan</item>
        <item>SY,  Seychelles</item>
        <item>SYR,  Syria</item>
        <item>T,  Thailand</item>
        <item>TCH,  Chad</item>
        <item>TG,  Togo</item>
        <item>TJ,  Tajikistan</item>
        <item>TM,  Turkmenistan</item>
        <item>TN,  Tunisia</item>
        <item>TR,  Turkey</item>
        <item>TT,  Trinidad and Tobago</item>
        <item>UA,  Ukraine</item>
        <item>UAE,  United Arab Emirates</item>
        <item>USA,  United States</item>
        <item>UY,  Uruguay</item>
        <item>UZ,  Uzbekistan</item>
        <item>V,   Vatican City</item>
        <item>VN,  Vietnam</item>
        <item>WAG,  Gambia</item>
        <item>WAL,  Sierra Leone</item>
        <item>WAN,  Nigeria</item>
        <item>WD,  Dominica</item>
        <item>WG,  Grenada</item>
        <item>WL,  Saint Lucia</item>
        <item>WS,  Samoa</item>
        <item>WV,  Saint Vincent and the Grenadines</item>
        <item>YAR,  Yemen</item>
        <item>YV,  Venezuela</item>
        <item>Z,  Zambia</item>
        <item>ZA,  South Africa</item>
        <item>ZW,  Zimbabwe</item>
    </string-array>
    <string name="textView_Make">Make</string>
    <string-array name="makers_cars">
        <item> </item>
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Austin Morris</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroën</item>
        <item>Dacia</item>
        <item>Daewoo</item>
        <item>Daihatsu</item>
        <item>Dodge</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>GMC</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Isuzu</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lada</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Lotus</item>
        <item>Maserati</item>
        <item>Mazda</item>
        <item>Mercedes-Benz</item>
        <item>MG</item>
        <item>MINI</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Porsche</item>
        <item>Renault</item>
        <item>Rolls Royce</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Seat</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Tata</item>
        <item>Toyota</item>
        <item>UMM</item>
        <item>Vauxhall</item>
        <item>Volvo</item>
        <item>VW</item>
        <item>Outra/Other</item>
    </string-array>
</resources>